Wrap navbar with Navlink to prevent reload

--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -23,10 +23,6 @@
 }
 
 @media (max-width: 415px) {
-  .brand-title {
-    display: none;
-  }
-
   .navbar-brand {
     margin: 0 1rem;
   }
